# Real-time-market-sentiment-and-trading-intelligence-platform

./: .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements-ci.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routers/: backtesting.py  jobs.py  news.py  portfolio.py  signals.py  streaming.py
backend/app/core/: middleware.py
backend/app/models/: __init__.py  price.py  watchlist.py
backend/app/schemas/: jobs.py  news.py  portfolio.py  trust.py
backend/app/services/: aggregation_service.py  backtest_service.py  backtesting.py  cache_service.py  fear_greed.py  job_service.py  news_service.py  nlp_service.py  replay_service.py  trust_service.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_coverage_gaps.py  test_pipeline.py
data/: README.md  sample_news.json  sample_prices.csv
docs/: api.md  architecture.md  change-log.md  codebase-overview.md  demo-runbook.md  resume-bullets.md
docs/preview/: index.html
docs/screenshots/: README.md
frontend/: .env.example  eslint.config.js  package-lock.json
frontend/src/components/dashboard/: FearGreedGauge.tsx  (+4 more)
frontend/src/data/: mockMarket.ts
frontend/src/hooks/: useMarketStream.ts
frontend/src/pages/: DashboardPage.tsx  NewsFeedPage.tsx  SignalsPage.tsx  TickerViewPage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: global.css
frontend/src/types/: market.ts
scripts/: run_demo.sh
